[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/JohnConsole.tscn" type="PackedScene" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="JohnConsole" parent="Node2D" instance=ExtResource( 2 )]
[connection signal="input_event" from="Node2D/JohnConsole" to="." method="_on_JohnConsole_input_event"]
[connection signal="mouse_entered" from="Node2D/JohnConsole" to="." method="_on_JohnConsole_mouse_entered"]
